--- a/cpmReview.html
+++ b/cpmReview.html
@@ -150,11 +150,17 @@
       font-size: 0.97em;
       margin: 0 0.5em;
     }
+    .dashboard-footer .pagination-wrapper .btn { min-width: 32px; padding-left: 0.5em; padding-right: 0.5em; }
+    .dashboard-footer .page-numbers .btn { min-width: 32px; padding-left: 0.5em; padding-right: 0.5em; }
+    .dashboard-footer .items-per-page select { min-width: 60px; }
     @media (max-width: 900px) {
       .cpm-table-section { padding: 0.7rem 0.2rem 0.2rem 0.2rem; }
       .cpm-header { padding: 0.7rem 0.2rem 0.2rem 0.2rem; }
       .nav-tabs .nav-link { font-size: 0.98rem; padding: 0.7rem 0.2rem; }
       .dashboard-table thead th, .dashboard-table td { padding: 0.3em 0.3em; }
+      .dashboard-footer { flex-direction: column !important; align-items: stretch !important; }
+      .footer-left, .footer-right { justify-content: flex-start !important; }
+      .dashboard-footer .pagination-wrapper { flex-wrap: wrap; }
     }
   </style>
 </head>
@@ -531,6 +537,46 @@
             </div>
           </div>
         </div>
+        <!-- Pagination -->
+        <div class="dashboard-footer mt-3 d-flex align-items-center flex-wrap justify-content-between gap-2">
+          <div class="footer-left d-flex align-items-center flex-wrap gap-3">
+            <div class="items-per-page d-flex align-items-center gap-2">
+              <label for="itemsPerPage" class="form-label-sm mb-0">Show</label>
+              <select id="itemsPerPage" class="form-select form-select-sm" style="width:auto; min-width:60px;">
+                <option value="10">10</option>
+                <option value="25">25</option>
+                <option value="50">50</option>
+                <option value="100">100</option>
+                <option value="500">500</option>
+                <option value="1000">1000</option>
+                <option value="2000">2000</option>
+              </select>
+              <span class="ms-2">entries</span>
+            </div>
+            <div class="summary-info ms-2">
+              Showing <span id="startEntry">1</span> to <span id="endEntry">6</span> of <span id="totalEntries">6</span> entries
+            </div>
+          </div>
+          <div class="footer-right d-flex align-items-center">
+            <div class="pagination-wrapper d-flex align-items-center gap-1 flex-nowrap">
+              <button class="btn btn-sm btn-outline-secondary" id="firstPage" title="First Page">
+                <i class="bi bi-chevron-double-left"></i>
+              </button>
+              <button class="btn btn-sm btn-outline-secondary" id="prevPage" title="Previous Page">
+                <i class="bi bi-chevron-left"></i>
+              </button>
+              <div class="page-numbers d-flex align-items-center flex-nowrap" id="pageNumbers">
+                <!-- Page numbers will be populated by JavaScript -->
+              </div>
+              <button class="btn btn-sm btn-outline-secondary" id="nextPage" title="Next Page">
+                <i class="bi bi-chevron-right"></i>
+              </button>
+              <button class="btn btn-sm btn-outline-secondary" id="lastPage" title="Last Page">
+                <i class="bi bi-chevron-double-right"></i>
+              </button>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </div>
@@ -538,5 +584,72 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Custom JS -->
   <script src="src/js/header.js"></script>
+  <script>
+    // --- Pagination logic for demo (static data, similar to partLevel.html) ---
+    const tableData = {
+      'tab-queue': Array.from(document.querySelectorAll('#tab-queue tbody tr')),
+      'tab-approved': Array.from(document.querySelectorAll('#tab-approved tbody tr')),
+      'tab-requests': Array.from(document.querySelectorAll('#tab-requests tbody tr')),
+    };
+    let currentTab = 'tab-queue';
+    let currentPage = 1;
+    let itemsPerPage = 10;
+    function renderTablePage(tabId, page, perPage) {
+      const rows = tableData[tabId];
+      const tbody = document.querySelector(`#${tabId} tbody`);
+      tbody.innerHTML = '';
+      const start = (page - 1) * perPage;
+      const end = Math.min(start + perPage, rows.length);
+      for (let i = start; i < end; i++) {
+        tbody.appendChild(rows[i].cloneNode(true));
+      }
+      document.getElementById('startEntry').textContent = rows.length === 0 ? 0 : start + 1;
+      document.getElementById('endEntry').textContent = end;
+      document.getElementById('totalEntries').textContent = rows.length;
+      renderPageNumbers(tabId, page, perPage);
+    }
+    function renderPageNumbers(tabId, page, perPage) {
+      const rows = tableData[tabId];
+      const totalPages = Math.ceil(rows.length / perPage) || 1;
+      const pageNumbersDiv = document.getElementById('pageNumbers');
+      pageNumbersDiv.innerHTML = '';
+      for (let i = 1; i <= totalPages; i++) {
+        const btn = document.createElement('button');
+        btn.className = 'btn btn-sm btn-outline-primary mx-1' + (i === page ? ' active' : '');
+        btn.textContent = i;
+        btn.onclick = () => { currentPage = i; renderTablePage(currentTab, currentPage, itemsPerPage); };
+        pageNumbersDiv.appendChild(btn);
+      }
+      document.getElementById('firstPage').disabled = page === 1;
+      document.getElementById('prevPage').disabled = page === 1;
+      document.getElementById('nextPage').disabled = page === totalPages;
+      document.getElementById('lastPage').disabled = page === totalPages;
+    }
+    document.getElementById('itemsPerPage').addEventListener('change', function() {
+      itemsPerPage = parseInt(this.value, 10);
+      currentPage = 1;
+      renderTablePage(currentTab, currentPage, itemsPerPage);
+    });
+    document.getElementById('firstPage').onclick = () => { currentPage = 1; renderTablePage(currentTab, currentPage, itemsPerPage); };
+    document.getElementById('prevPage').onclick = () => { if (currentPage > 1) { currentPage--; renderTablePage(currentTab, currentPage, itemsPerPage); } };
+    document.getElementById('nextPage').onclick = () => {
+      const totalPages = Math.ceil(tableData[currentTab].length / itemsPerPage) || 1;
+      if (currentPage < totalPages) { currentPage++; renderTablePage(currentTab, currentPage, itemsPerPage); }
+    };
+    document.getElementById('lastPage').onclick = () => {
+      currentPage = Math.ceil(tableData[currentTab].length / itemsPerPage) || 1;
+      renderTablePage(currentTab, currentPage, itemsPerPage);
+    };
+    // Tab switching
+    document.querySelectorAll('#approvalTabs .nav-link').forEach(tab => {
+      tab.addEventListener('shown.bs.tab', function(e) {
+        currentTab = e.target.getAttribute('data-bs-target').replace('#', '');
+        currentPage = 1;
+        renderTablePage(currentTab, currentPage, itemsPerPage);
+      });
+    });
+    // Initial render
+    renderTablePage(currentTab, currentPage, itemsPerPage);
+  </script>
 </body>
 </html> 
